# cpp-variable-binding

./: .gitignore  CMakeLists.txt  README.md
tests/: CMakeLists.txt  bindqt_test.cc  callback_test.cc  simplebind_test.cc  updatestop_test.cc
vbd/: CMakeLists.txt  graphstyle.cc  graphstyle.h  vbd.cc  vbd.h  vbd_impl.h
vbdqt/: bindqobject.h
